Use IntelliJ's default reformat/rearrange/optimise imports.